No need for some pages to be in php

--- a/know_more.html
+++ b/know_more.html
@@ -37,7 +37,7 @@
         the challenges that we could face while living on a different place than earth. They will be sent for 4 months to experience and analyze the surviving conditions there.
         This project is really important as our Mars-Mission 2060 totally depends on its success. <br>Lets make this cosmos alive!
     </h3>
-    <a href="index.php">
+    <a href="index.html">
         <input type="submit" value="Back">
         </a>
 </body>
